<resources>
    <string name="app_name">Tank War Game</string>
    <string name="new_user">New User</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="_1vs1_local">1vs1 local</string>
    <string name="player_vs_cpu">Player vs CPU</string>
    <string name="_1vs1_online">1vs1 Online</string>
    <string name="score">Score</string>
    <string name="_0">0</string>
    <string name="player_2_username">Player 2 username</string>
    <string name="start_game">Start Game</string>
    <string name="plus_symbol">+</string>
    <string name="game_time_minutes">Game time</string>
    <string name="_3">3</string>
    <string name="minutes">minutes</string>
    <string name="max_score">Max Score</string>
    <string name="_10">10</string>
    <string name="points">points</string>
    <string name="unlimited">Unlimited</string>
    <string name="winner">Winner!</string>
</resources>
