<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSettingsActivity">

    <!--Time controls-->
    <TextView
        android:id="@+id/textViewTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_time_minutes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/imageButton_decreaseTime"
        app:layout_constraintRight_toRightOf="@id/imageButton_increaseTime"
        android:layout_marginTop="30dp"
        android:textSize="25sp"/>

    <ImageButton
        android:id="@+id/imageButton_decreaseTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_remove"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTimeTitle"
        android:layout_marginLeft="30dp"
        android:onClick="decreaseTime"/>

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintLeft_toRightOf="@id/imageButton_decreaseTime"
        app:layout_constraintTop_toTopOf="@id/imageButton_decreaseTime"
        app:layout_constraintBottom_toBottomOf="@id/imageButton_decreaseTime"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        app:layout_constraintLeft_toRightOf="@id/textView_time"
        app:layout_constraintTop_toTopOf="@id/imageButton_decreaseTime"
        app:layout_constraintBottom_toBottomOf="@id/imageButton_decreaseTime"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"/>

    <ImageButton
        android:id="@+id/imageButton_increaseTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add"
        app:layout_constraintLeft_toRightOf="@id/textView_minutes"
        app:layout_constraintTop_toTopOf="@id/imageButton_decreaseTime"
        android:layout_marginLeft="10dp"
        android:onClick="increaseTime"/>


    <!--Score controls-->
    <TextView
        android:id="@+id/textViewScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_score"
        app:layout_constraintTop_toBottomOf="@id/imageButton_decreaseTime"
        app:layout_constraintLeft_toLeftOf="@id/imageButton_decreaseScore"
        app:layout_constraintRight_toRightOf="@id/imageButton_increaseScore"
        android:layout_marginTop="30dp"
        android:textSize="25sp"/>

    <ImageButton
        android:id="@+id/imageButton_decreaseScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_remove"
        app:layout_constraintLeft_toLeftOf="@id/imageButton_decreaseTime"
        app:layout_constraintTop_toBottomOf="@id/textViewScoreTitle"
        android:onClick="decreaseMaxScore"/>

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        app:layout_constraintLeft_toRightOf="@id/imageButton_decreaseScore"
        app:layout_constraintTop_toTopOf="@id/imageButton_decreaseScore"
        app:layout_constraintBottom_toBottomOf="@id/imageButton_decreaseScore"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        app:layout_constraintLeft_toRightOf="@id/textView_score"
        app:layout_constraintTop_toTopOf="@id/imageButton_decreaseScore"
        app:layout_constraintBottom_toBottomOf="@id/imageButton_decreaseScore"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"/>

    <ImageButton
        android:id="@+id/imageButton_increaseScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add"
        app:layout_constraintLeft_toRightOf="@id/textView_points"
        app:layout_constraintTop_toTopOf="@id/imageButton_decreaseScore"
        android:layout_marginLeft="10dp"
        android:onClick="increaseMaxScore"/>


    <!--Start Game button-->
    <Button
        android:id="@+id/button_playlocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:onClick="playGameLocal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>